--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,7 @@ asd.asdasd = aasdasd
 jdbc_url = jdbc:mysql://localhost:3306/test
 jdbc_user = root
 jdbc_password = 123456
+
+
+##
+kafka.enabled=true
