--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,5 @@
-log4j.rootLogger=INFO,console
+log4j.rootLogger=DEBUG,console
 log4j.logger.com.wuhulala = DEBUG,file
-log4j.logger.org.springframeword = DEBUG,console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
