ADD: 测试Configuration注解的class实例化的流程以及String也可以被注册为一个Bean

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
-log4j.rootLogger=DEBUG,console
+log4j.rootLogger=INFO,console
 log4j.logger.com.wuhulala = DEBUG,file
+log4j.logger.org.springframework = DEBUG,file
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
