--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-normal</module>
         <module>spring-batch</module>
         <module>spring-test-framework</module>
+        <module>spring-batch-advance</module>
     </modules>
     <!--  <parent>
           <groupId>org.springframework.boot</groupId>
