--- a/spring-batch-advance/pom.xml
+++ b/spring-batch-advance/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>studyspringcode</artifactId>
+		<artifactId>spring-feature-test</artifactId>
 		<groupId>com.wuhulala</groupId>
-		<version>1.0.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-batch-advance</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -17,10 +17,9 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>2.0.0.RELEASE</version>
+				<version>2.1.3.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
