--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-batch-advance</module>
         <module>spring-session-study</module>
         <module>spring-web-feature</module>
+        <module>springboot-actions</module>
     </modules>
     <!--  <parent>
           <groupId>org.springframework.boot</groupId>
@@ -26,6 +27,18 @@
     <properties>
         <spring.version>5.1.5.RELEASE</spring.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.1.3.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
     <build>
