国际化测试

--- a/springboot-actions/spring-boot-chapter1/src/main/resources/application.yaml
+++ b/springboot-actions/spring-boot-chapter1/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   main:
     banner-mode: console
+  messages:
+    basename: i18n.login, i18n.error  #支持逗号分隔
 
 my:
   secret: ${random.value}
