--- a/springboot-actions/spring-boot-chapter1/pom.xml
+++ b/springboot-actions/spring-boot-chapter1/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
