--- a/springboot-actions/spring-boot-chapter11-deploy/pom.xml
+++ b/springboot-actions/spring-boot-chapter11-deploy/pom.xml
@@ -10,6 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-chapter11-deploy</artifactId>
-    <description>mvn打包、docker镜像</description>
+    <description>mvn打包、docker镜像，https://spring.io/guides/topicals/spring-boot-docker</description>
 
 </project>
