添加 JSR 303 校验规则

--- a/springboot-actions/spring-boot-chapter12-others/pom.xml
+++ b/springboot-actions/spring-boot-chapter12-others/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spring-boot-chapter12-mail</module>
+        <module>spring-boot-chapter12-validate</module>
     </modules>
 
 
