--- a/springboot-actions/spring-boot-chapter7-websecurity/oauth2-sample/pom.xml
+++ b/springboot-actions/spring-boot-chapter7-websecurity/oauth2-sample/pom.xml
@@ -3,16 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springboot-actions</artifactId>
+        <artifactId>spring-boot-chapter7-websecurity</artifactId>
         <groupId>com.wuhulala</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-chapter7-websecurity</artifactId>
+    <artifactId>oauth2-sample</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>oauth2-sample</module>
+        <module>oauth2-server</module>
+        <module>oauth2-client</module>
     </modules>
 
 
