添加 spring boot rxjava 混合使用

--- a/springboot-actions/spring-boot-chapter12-others/pom.xml
+++ b/springboot-actions/spring-boot-chapter12-others/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>spring-boot-chapter12-mail</module>
         <module>spring-boot-chapter12-validate</module>
+        <module>spring-boot-chapter12-rxjava2</module>
     </modules>
 
 
