--- a/springboot-actions/spring-boot-chapter2-sql/src/main/resources/application.properties
+++ b/springboot-actions/spring-boot-chapter2-sql/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.datasource.url=jdbc:mysql://mysqlhost:3306/mybatis
 spring.datasource.username=mybatis
 spring.datasource.password=mybatis1234
 
-logging.level.root=INFO
-logging.level.tk.mybatis=TRACE
+logging.config=classpath:log4j2.xml
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.typeAliasesPackage=com.wuhulala.springboot.mybatis.model
