A: 在线截图工具，用于图表下载:smirk:

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-extension-point</module>
         <module>springboot-actions</module>
         <module>spring-couchbase</module>
+        <module>spring-crawler</module>
     </modules>
     <!--  <parent>
           <groupId>org.springframework.boot</groupId>
