--- a/springboot-actions/pom.xml
+++ b/springboot-actions/pom.xml
@@ -26,6 +26,7 @@
         <module>spring-boot-chapter11-deploy</module>
         <module>spring-boot-chapter12-others</module>
         <module>spring-boot-chapter2-shardingjdbc</module>
+        <module>spring-boot-chapter2-compositedb</module>
     </modules>
 
 
