--- a/springboot-actions/spring-boot-chapter2-sql/src/main/resources/application.properties
+++ b/springboot-actions/spring-boot-chapter2-sql/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=mybatis1234
 
 logging.config=classpath:log4j2.xml
 
-mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+db.type=mysql
+mybatis.mapper-locations=classpath:mapper/${db.type}/*Mapper.xml
 mybatis.typeAliasesPackage=com.wuhulala.springboot.mybatis.model
