--- a/springboot-actions/pom.xml
+++ b/springboot-actions/pom.xml
@@ -27,6 +27,7 @@
         <module>spring-boot-chapter12-others</module>
         <module>spring-boot-chapter2-shardingjdbc</module>
         <module>spring-boot-chapter2-compositedb</module>
+        <module>spring-boot-chapter10-devtools</module>
     </modules>
 
 
